--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     width: 300px;
     height: 70px;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 15px;
     padding: 15px 10px;
     box-shadow: 0 0 10px #0009;
     border-top-left-radius: 9px;
@@ -109,4 +109,29 @@ p {
     width: 100%;
     text-align: center;
     font-size: 9px;
+}
+
+.cajaS {
+    border: #111;
+    border-style: solid;
+    border-width: 1px;
+    background: #eee;
+    text-align: left;
+    width: 320px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 0px;
+    padding: 0;
+    border-radius: 8px;
+}
+
+.textS {
+    color: #111;
+    padding: 0;
+    margin: 8px;
+    font-size: 15px;
+}
+
+.contenedor {
+    
 }
