--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 .cajaA {
     background: #000055;
     text-align: center;
-    width: 330px;
+    width: 90%;
     height: 70px;
     margin: auto;
     margin-top: 15px;
@@ -45,7 +45,7 @@ body {
     width: 50px;
     height: 50px;
     margin: 0%;
-    margin-left: 275px;
+    margin-left: 85%;
     margin-top: -65px;
     border-radius: 100%;
 }
@@ -60,7 +60,7 @@ body {
 .cajaB {
     background: #eee;
     text-align: center;
-    width: 330px;
+    width: 90%;
     height: 400px;
     margin: auto;
     padding: 15px 10px;
@@ -83,7 +83,7 @@ p {
     border-width: 1px;
     background: #eee;
     text-align: center;
-    width: 310px;
+    width: 95%;
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -117,7 +117,7 @@ p {
     border-width: 1px;
     background: #eee;
     text-align: left;
-    width: 350px;
+    width: 95%;
     margin: auto;
     margin-top: 10px;
     margin-bottom: 0px;
