--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,8 @@ p {
 .title {
     background: #000055;
     margin: 0;
+    margin-top: -3%;
+    margin-left: -1.8%;
     padding: 5px;
     height: 50px;
     width: 100%;
