--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .cajaA {
-    background: #000055;
+    background: #00004a;
     text-align: center;
     width: 90%;
     height: 70px;
@@ -102,13 +102,13 @@ p {
 }
 
 .title {
-    background: #000055;
+    background: #00004a;
     margin: 0;
     margin-top: -3%;
-    margin-left: -2%;
+    margin-left: -1%;
     padding: 5px;
     height: 50px;
-    width: 98%;
+    width: 97%;
     text-align: center;
     font-size: 9px;
 }
@@ -117,7 +117,7 @@ p {
     border: #111;
     border-style: solid;
     border-width: 1px;
-    background: #eee;
+    background: #f9f9f9;
     text-align: left;
     width: 95%;
     margin: auto;
