--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ p {
 }
 
 .title {
-    background: #00004a;
+    background: #7a0000;
     margin: 0;
     margin-top: -3%;
     margin-left: -2%;
