--- a/styles.css
+++ b/styles.css
@@ -4,47 +4,138 @@ body {
     color: white;
 }
 
-.card {
-    background: #ff9933;
+.cajaA {
+    background: #00004a;
     text-align: center;
-    width: 300px;
+    width: 90%;
+    height: 70px;
     margin: auto;
-    margin-top: 50px;
-    padding: 20px 10px;
-    box-shadow: 0 0 45px #0009;
+    margin-top: 15px;
+    padding: 15px 10px;
+    box-shadow: 0 0 10px #0009;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+}
+
+.titulo {
+    margin: 0;
+    text-align: left;
+    font-size: 15px;
+    font-weight: 800;
+}
+
+.descripcion {
+    margin: 0;
+    margin-top: 5px;
+    text-align: left;
+    font-size: 15px;
+    font-weight: 800;
+}
+
+.aaa {
+    margin: 0;
+    margin-top: 5px;
+    text-align: left;
+    font-size: 15px;
+    font-weight: 200;
+}
+
+.circulo {
+    background: #eee;
+    width: 50px;
+    height: 50px;
+    margin: 0%;
+    margin-left: 85%;
+    margin-top: -65px;
+    border-radius: 100%;
+}
+
+.nota {
+    color: #111;
+    margin: 0;
+    padding-top: 16px;
+    text-align: center;
+}
+
+.cajaB {
+    background: #eee;
+    text-align: center;
+    width: 90%;
+    height: 400px;
+    margin: auto;
+    padding: 15px 10px;
+    box-shadow: 0 0 10px #0009;
+    border-bottom-left-radius: 9px;
+    border-bottom-right-radius: 9px;
+}
+
+p {
+    color: #111;
+    text-align: left;
+    margin: 0;
+    margin-top: 5px;
+    font-size: 15px;
+}
+
+.corte {
+    border: #111;
+    border-style: solid;
+    border-width: 1px;
+    background: #eee;
+    text-align: center;
+    width: 95%;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 6px 10px;
     border-radius: 8px;
 }
 
-.card2 {
-    background: #aa5511;
+.ncorte {
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
 }
 
-.card3 {
-    background: #0077dd;
+.B {
+    color: #eee;
 }
 
 .title {
-    font-size: 22px;
+    background: #7a0000;
     margin: 0;
-}
-
-.description {
-    font-size: 13px;
-    font-weight: 100px;
-    letter-spacing: 2px;
-    margin: 0;
-    margin-top: 5px;
-}
-
-.content {
+    margin-top: -3%;
+    margin-left: -2%;
+    padding: 5px;
+    height: 50px;
+    width: 98%;
+    text-align: center;
     font-size: 9px;
-    padding: 10px;
-    padding-bottom: 0;
-    text-align: justify;
-    margin-bottom: 0;
 }
 
-.img {
-    width: 250px;
-    border-radius: 50%;
+.cajaS {
+    border: #111;
+    border-style: solid;
+    border-width: 1px;
+    background: #f9f9f9;
+    text-align: left;
+    width: 95%;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 0px;
+    padding: 0;
+    border-radius: 8px;
+}
+
+.textS {
+    color: #111;
+    padding: 0;
+    margin: 8px;
+    font-size: 15px;
+}
+
+.contenedor{
+    width: 100%;
+    margin: 0;
+    margin-left: -2%;
 }
