--- a/styles.css
+++ b/styles.css
@@ -102,10 +102,11 @@ p {
 }
 
 .title {
-    background: #7a0000;
+    background: #7a6c00;
     margin: 0;
+    margin-right: -2%;
     margin-top: -3%;
-    margin-left: -2%;
+    margin-left: -3%;
     padding: 5px;
     height: 50px;
     width: 98%;
