--- a/styles.css
+++ b/styles.css
@@ -102,14 +102,14 @@ p {
 }
 
 .title {
-    background: #7a6c00;
+    background: #007a00;
     margin: 0;
-    margin-right: -2%;
     margin-top: -3%;
-    margin-left: -3%;
+    margin-left: -2%;
+    margin-right: -2%;
     padding: 5px;
     height: 50px;
-    width: 98%;
+    width: 101%;
     text-align: center;
     font-size: 9px;
 }
@@ -138,5 +138,4 @@ p {
 .contenedor{
     width: 100%;
     margin: 0;
-    margin-left: -2%;
 }
