--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     height: 70px;
     margin: auto;
     margin-top: 15px;
-    padding: 15px 10px;
+    padding: 10px 10px;
     box-shadow: 0 0 10px #0009;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
@@ -46,7 +46,7 @@ body {
     height: 50px;
     margin: 0%;
     margin-left: 85%;
-    margin-top: -65px;
+    margin-top: -55px;
     border-radius: 100%;
 }
 
@@ -102,14 +102,14 @@ p {
 }
 
 .title {
-    background: #007a00;
+    background: #00004a;
     margin: 0;
     margin-top: -3%;
     margin-left: -2%;
     margin-right: -2%;
     padding: 5px;
     height: 50px;
-    width: 101%;
+    width: 101.5%;
     text-align: center;
     font-size: 9px;
 }
