--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,11 @@ body {
 .cajaA {
     background: #00004a;
     text-align: center;
-    width: 90%;
-    height: 70px;
+    width: 80%;
+    height: 20px;
     margin: auto;
-    margin-top: 15px;
+    margin-top: 30px;
     padding: 10px 10px;
-    box-shadow: 0 0 10px #0009;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
 }
@@ -21,50 +20,16 @@ body {
     margin: 0;
     text-align: left;
     font-size: 15px;
-    font-weight: 800;
-}
-
-.descripcion {
-    margin: 0;
-    margin-top: 5px;
-    text-align: left;
-    font-size: 15px;
-    font-weight: 800;
-}
-
-.aaa {
-    margin: 0;
-    margin-top: 5px;
-    text-align: left;
-    font-size: 15px;
-    font-weight: 200;
-}
-
-.circulo {
-    background: #eee;
-    width: 50px;
-    height: 50px;
-    margin: 0%;
-    margin-left: 85%;
-    margin-top: -55px;
-    border-radius: 100%;
-}
-
-.nota {
-    color: #111;
-    margin: 0;
-    padding-top: 16px;
-    text-align: center;
+    font-weight: 400;
 }
 
 .cajaB {
-    background: #eee;
+    background: #fff;
     text-align: center;
-    width: 90%;
-    height: 400px;
+    width: 80%;
+    height: 70px;
     margin: auto;
     padding: 10px 10px;
-    box-shadow: 0 0 10px #0009;
     border-bottom-left-radius: 9px;
     border-bottom-right-radius: 9px;
 }
@@ -73,38 +38,15 @@ p {
     color: #111;
     text-align: left;
     margin: 0;
-    margin-top: 5px;
+    margin-top: -2px;
     font-size: 15px;
-}
-
-.corte {
-    border: #111;
-    border-style: solid;
-    border-width: 1px;
-    background: #eee;
-    text-align: center;
-    width: 95%;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 6px 10px;
-    border-radius: 8px;
-}
-
-.ncorte {
-    margin: 0;
-    padding: 0;
-    font-size: 15px;
-}
-
-.B {
-    color: #eee;
+    padding-bottom: 12px;
 }
 
 .title {
     background: #00004a;
-    margin: 0;
-    margin-top: -3%;
+    margin-bottom: 10px;
+    margin-top: -2%;
     margin-left: -2.5%;
     margin-right: -2%;
     padding: 5px;
@@ -114,28 +56,36 @@ p {
     font-size: 9px;
 }
 
-.cajaS {
-    border: #111;
-    border-style: solid;
-    border-width: 1px;
-    background: #f9f9f9;
-    text-align: left;
-    width: 95%;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 0px;
-    padding: 0;
-    border-radius: 8px;
-}
-
-.textS {
-    color: #111;
-    padding: 0;
-    margin: 8px;
-    font-size: 15px;
-}
-
 .contenedor{
     width: 100%;
     margin: 0;
+}
+
+.dias {
+    background: #fff;
+    color: #000;
+    margin: 0;
+    padding: 1px;
+    height: 10px;
+    width: 100%;
+    text-align: center;
+    font-size: 12px;
+}
+
+.bot1 {
+    margin-left: 2%;
+}
+
+.bot2 {
+    margin-left: 75%;
+}
+
+button {
+    height: 38px;
+    width: 38px;
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
