--- a/styles.css
+++ b/styles.css
@@ -91,3 +91,16 @@ img {
     width: 100%;
     height: 100%;
 }
+
+.img {
+    width: 10%;
+    height: 10%;
+    margin: auto;
+}
+
+.no {
+    text-align: center;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 10px;
+}
