--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,9 @@ body {
 .cajaA {
     background: #00004a;
     text-align: center;
-    width: 80%;
+    width: 70%;
     height: 20px;
-    margin: auto;
+    margin-left: 20%;
     margin-top: 30px;
     padding: 10px 10px;
     border-top-left-radius: 9px;
@@ -26,9 +26,9 @@ body {
 .cajaB {
     background: #fff;
     text-align: center;
-    width: 80%;
+    width: 70%;
     height: 70px;
-    margin: auto;
+    margin-left: 20%;
     padding: 10px 10px;
     border-bottom-left-radius: 9px;
     border-bottom-right-radius: 9px;
@@ -39,8 +39,8 @@ p {
     text-align: left;
     margin: 0;
     margin-top: -2px;
-    font-size: 15px;
-    padding-bottom: 12px;
+    font-size: 14px;
+    padding-bottom: 10px;
 }
 
 .title {
@@ -103,4 +103,14 @@ img {
     margin-left: 25%;
     margin-right: 25%;
     margin-top: 10px;
+}
+
+.horas {
+    margin-top: -100px;
+    margin-right: 80%;
+}
+
+.hora {
+    font-size: 12px;
+    text-align: center;
 }
